--- a/package.json
+++ b/package.json
@@ -24,15 +24,18 @@
     "@nestjs/common": "^10.0.0",
     "@nestjs/config": "^3.1.1",
     "@nestjs/core": "^10.0.0",
+    "@nestjs/mongoose": "^11.0.3",
     "@nestjs/platform-express": "^10.0.0",
     "@nestjs/swagger": "^7.1.16",
     "@nestjs/throttler": "^5.0.1",
     "@pinecone-database/pinecone": "^6.1.2",
+    "@qdrant/js-client-rest": "^1.15.1",
     "axios": "^1.11.0",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.0",
     "cors": "^2.8.5",
     "mammoth": "^1.6.0",
+    "mongoose": "^8.18.1",
     "multer": "^1.4.5-lts.1",
     "openai": "^4.20.1",
     "pdf-parse": "^1.1.1",
