--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "openai": "^4.20.1",
     "pdf-parse": "^1.1.1",
     "reflect-metadata": "^0.1.13",
+    "replicate": "^1.2.0",
     "rxjs": "^7.8.1",
     "sharp": "^0.33.2",
     "tesseract.js": "^5.0.3",
@@ -53,7 +54,7 @@
     "@types/cors": "^2.8.17",
     "@types/express": "^4.17.17",
     "@types/jest": "^29.5.2",
-    "@types/multer": "^1.4.11",
+    "@types/multer": "^1.4.13",
     "@types/node": "^20.3.1",
     "@types/pdf-parse": "^1.1.4",
     "@types/supertest": "^2.0.12",
