--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "replicate": "^1.2.0",
     "rxjs": "^7.8.1",
     "sharp": "^0.33.2",
+    "stripe": "^18.5.0",
     "tesseract.js": "^5.0.3",
     "uuid": "^9.0.1"
   },
