--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -13,7 +13,7 @@ jobs:
       SERVER_USER: root
       SERVER_HOST: 167.235.200.242
       SERVER_DIR: /var/www/vibestylerai
-      APP_DIR: /var/www/vibestylerai # hier liegt deine package.json
+      APP_DIR: /var/www/vibestylerai # Pfad mit package.json (ggf. anpassen)
       BRANCH: vibestylerai-main
       REPO_URL: git@github.com:Seakuh/vibestylerai.git # <-- anpassen!
       APP_NAME: vibestylerai
@@ -36,26 +36,32 @@ jobs:
 
       - name: Deploy to server
         run: |
-          ssh ${{ env.SERVER_USER }}@${{ env.SERVER_HOST }} << 'EOF'
+          ssh -T ${{ env.SERVER_USER }}@${{ env.SERVER_HOST }} << EOF
             set -euo pipefail
-            REPO_URL="${REPO_URL}"; BRANCH="${BRANCH}"
-            SERVER_DIR="${SERVER_DIR}"; APP_DIR="${APP_DIR}"
-            APP_NAME="${APP_NAME}"; NS="${NS}"; START_CMD="${START_CMD}"
 
-            mkdir -p "$SERVER_DIR"
+            # --- Variablen aus GitHub Actions direkt einsetzen ---
+            REPO_URL="${{ env.REPO_URL }}"
+            BRANCH="${{ env.BRANCH }}"
+            SERVER_DIR="${{ env.SERVER_DIR }}"
+            APP_DIR="${{ env.APP_DIR }}"
+            APP_NAME="${{ env.APP_NAME }}"
+            NS="${{ env.NS }}"
+            START_CMD="${{ env.START_CMD }}"
 
-            if [ ! -d "$SERVER_DIR/.git" ]; then
+            mkdir -p "\$SERVER_DIR"
+
+            if [ ! -d "\$SERVER_DIR/.git" ]; then
               echo "➡️  Erste Installation (clone)"
-              git clone --branch "$BRANCH" "$REPO_URL" "$SERVER_DIR"
+              git clone --branch "\$BRANCH" "\$REPO_URL" "\$SERVER_DIR"
             else
               echo "➡️  Update bestehendes Repo"
-              cd "$SERVER_DIR"
-              git fetch origin "$BRANCH"
-              git checkout "$BRANCH"
-              git reset --hard "origin/$BRANCH"
+              cd "\$SERVER_DIR"
+              git fetch origin "\$BRANCH"
+              git checkout "\$BRANCH"
+              git reset --hard "origin/\$BRANCH"
             fi
 
-            cd "$APP_DIR"
+            cd "\$APP_DIR"
 
             # Node & PM2 sicherstellen (ohne andere Apps anzufassen)
             if ! command -v node >/dev/null 2>&1; then
@@ -77,15 +83,15 @@ jobs:
               npm install --production || npm install
             fi
 
-            echo "⚒️  Build falls nötig"
+            echo "⚒️  Build (falls vorhanden)"
             npm run build || true
 
-            echo "🚀 Starte/Reload PM2"
-            if pm2 describe "$APP_NAME" --namespace "$NS" >/dev/null 2>&1; then
-              pm2 reload "$APP_NAME" --namespace "$NS" --update-env || \
-              pm2 restart "$APP_NAME" --namespace "$NS" --update-env
+            echo "🚀 Starte/Reload PM2 (nur diese App, eigener Namespace)"
+            if pm2 describe "\$APP_NAME" --namespace "\$NS" >/dev/null 2>&1; then
+              pm2 reload "\$APP_NAME" --namespace "\$NS" --update-env || \
+              pm2 restart "\$APP_NAME" --namespace "\$NS" --update-env
             else
-              pm2 start bash --name "$APP_NAME" --namespace "$NS" -- -lc "cd $APP_DIR && $START_CMD"
+              pm2 start bash --name "\$APP_NAME" --namespace "\$NS" -- -lc "cd \$APP_DIR && \$START_CMD"
             fi
 
             echo "💾 Speichere PM2 Prozessliste"
