--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -34,66 +34,66 @@ jobs:
           mkdir -p ~/.ssh
           ssh-keyscan -H ${{ env.SERVER_HOST }} >> ~/.ssh/known_hosts
 
-      - name: Deploy to server
-        run: |
-          ssh -T ${{ env.SERVER_USER }}@${{ env.SERVER_HOST }} << EOF
-            set -euo pipefail
+          - name: Deploy to server
+          run: |
+            ssh -T ${{ env.SERVER_USER }}@${{ env.SERVER_HOST }} << EOF
+              set -euo pipefail
 
-            # --- Variablen aus GitHub Actions direkt einsetzen ---
-            REPO_URL="${{ env.REPO_URL }}"
-            BRANCH="${{ env.BRANCH }}"
-            SERVER_DIR="${{ env.SERVER_DIR }}"
-            APP_DIR="${{ env.APP_DIR }}"
-            APP_NAME="${{ env.APP_NAME }}"
-            NS="${{ env.NS }}"
-            START_CMD="${{ env.START_CMD }}"
+              REPO_URL="${{ env.REPO_URL }}"
+              BRANCH="${{ env.BRANCH }}"
+              SERVER_DIR="${{ env.SERVER_DIR }}"
+              APP_DIR="${{ env.APP_DIR }}"
+              APP_NAME="${{ env.APP_NAME }}"
+              NS="${{ env.NS }}"
+              START_CMD="${{ env.START_CMD }}"
 
-            mkdir -p "\$SERVER_DIR"
+              mkdir -p "\$SERVER_DIR"
 
-            if [ ! -d "\$SERVER_DIR/.git" ]; then
-              echo "➡️  Erste Installation (clone)"
-              git clone --branch "\$BRANCH" "\$REPO_URL" "\$SERVER_DIR"
-            else
-              echo "➡️  Update bestehendes Repo"
-              cd "\$SERVER_DIR"
-              git fetch origin "\$BRANCH"
-              git checkout "\$BRANCH"
-              git reset --hard "origin/\$BRANCH"
-            fi
+              if [ -d "\$SERVER_DIR/.git" ]; then
+                echo "➡️  Update bestehendes Repo"
+                cd "\$SERVER_DIR"
+                git fetch origin "\$BRANCH"
+                git checkout "\$BRANCH"
+                git reset --hard "origin/\$BRANCH"
+              else
+                if [ -z "\$(ls -A "\$SERVER_DIR")" ]; then
+                  echo "➡️  Erste Installation (clone in leeres Verzeichnis)"
+                  git clone --branch "\$BRANCH" "\$REPO_URL" "\$SERVER_DIR"
+                else
+                  echo "⚠️  Verzeichnis \$SERVER_DIR existiert, ist aber kein Git-Repo."
+                  echo "    Bitte aufräumen oder altes Deployment dorthin verschieben."
+                  exit 1
+                fi
+              fi
 
-            cd "\$APP_DIR"
+              cd "\$APP_DIR"
 
-            # Node & PM2 sicherstellen (ohne andere Apps anzufassen)
-            if ! command -v node >/dev/null 2>&1; then
-              echo "📦 Installiere Node.js"
-              apt-get update
-              apt-get install -y curl
-              curl -fsSL https://deb.nodesource.com/setup_20.x | bash -
-              apt-get install -y nodejs
-            fi
-            if ! command -v pm2 >/dev/null 2>&1; then
-              echo "📦 Installiere PM2"
-              npm i -g pm2
-            fi
+              # Node & PM2 sicherstellen
+              if ! command -v node >/dev/null 2>&1; then
+                apt-get update
+                apt-get install -y curl
+                curl -fsSL https://deb.nodesource.com/setup_20.x | bash -
+                apt-get install -y nodejs
+              fi
+              if ! command -v pm2 >/dev/null 2>&1; then
+                npm i -g pm2
+              fi
 
-            echo "📦 Installiere Dependencies"
-            if [ -f package-lock.json ]; then
-              npm ci --omit=dev || npm ci
-            else
-              npm install --production || npm install
-            fi
+              # Dependencies installieren
+              if [ -f package-lock.json ]; then
+                npm ci --omit=dev || npm ci
+              else
+                npm install --production || npm install
+              fi
 
-            echo "⚒️  Build (falls vorhanden)"
-            npm run build || true
+              npm run build || true
 
-            echo "🚀 Starte/Reload PM2 (nur diese App, eigener Namespace)"
-            if pm2 describe "\$APP_NAME" --namespace "\$NS" >/dev/null 2>&1; then
-              pm2 reload "\$APP_NAME" --namespace "\$NS" --update-env || \
-              pm2 restart "\$APP_NAME" --namespace "\$NS" --update-env
-            else
-              pm2 start bash --name "\$APP_NAME" --namespace "\$NS" -- -lc "cd \$APP_DIR && \$START_CMD"
-            fi
+              if pm2 describe "\$APP_NAME" --namespace "\$NS" >/dev/null 2>&1; then
+                pm2 reload "\$APP_NAME" --namespace "\$NS" --update-env || \
+                pm2 restart "\$APP_NAME" --namespace "\$NS" --update-env
+              else
+                pm2 start bash --name "\$APP_NAME" --namespace "\$NS" -- -lc "cd \$APP_DIR && \$START_CMD"
+              fi
 
-            echo "💾 Speichere PM2 Prozessliste"
-            pm2 save
-          EOF
+              pm2 save
+            EOF
