--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,9 +1,9 @@
-version: '3.9'
-
 services:
   qdrant:
     image: qdrant/qdrant:latest
     container_name: qdrant
+    profiles:
+      - with-qdrant
     ports:
       - "6333:6333"
     volumes:
@@ -19,15 +19,13 @@ services:
     container_name: doc_rag_api
     env_file:
       - .env
-    depends_on:
-      qdrant:
-        condition: service_healthy
     ports:
-      - "8000:8000"
+      - "8010:8000"
     volumes:
       - ./:/app
     command: ["uvicorn", "app.main:app", "--host", "0.0.0.0", "--port", "8000", "--reload"]
+    extra_hosts:
+      - "host.docker.internal:host-gateway"
 
 volumes:
   qdrant_storage:
-
