--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "rag-backend",
   "version": "1.0.0",
-  "description": "NestJS RAG Backend with Pinecone and OpenAI integration",
+  "description": "NestJS RAG Backend with Qdrant and OpenAI integration",
   "author": "Your Name",
   "private": true,
   "license": "MIT",
@@ -17,7 +17,10 @@
     "test:watch": "jest --watch",
     "test:cov": "jest --coverage",
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
-    "test:e2e": "jest --config ./test/jest-e2e.json"
+    "test:e2e": "jest --config ./test/jest-e2e.json",
+    "qdrant:start": "bash scripts/start-qdrant.sh",
+    "qdrant:stop": "docker compose stop qdrant",
+    "qdrant:logs": "docker compose logs -f qdrant"
   },
   "dependencies": {
     "@aws-sdk/client-s3": "^3.883.0",
