--- a/.github/workflows/deploy-backend.yml
+++ b/.github/workflows/deploy-backend.yml
@@ -53,11 +53,84 @@ jobs:
 
               echo "Schreibe .env..."
               cat > .env <<EOF
+              # ==============================================
+              # Application Configuration
+              # ==============================================
               PORT=4001
+              NODE_ENV=production
+
+              # ==============================================
+              # MongoDB
+              # ==============================================
               MONGODB_URI=${{ secrets.MONGODB_URI }}
+
+              # ==============================================
+              # JWT
+              # ==============================================
               JWT_SECRET=${{ secrets.JWT_SECRET }}
+
+              # ==============================================
+              # OpenAI
+              # ==============================================
+              OPENAI_API_KEY=${{ secrets.OPENAI_API_KEY }}
+              OPENAI_MODEL=${{ secrets.OPENAI_MODEL }}
+              EMBEDDING_MODEL=${{ secrets.EMBEDDING_MODEL }}
+
+              # ==============================================
+              # Pinecone
+              # ==============================================
+              PINECONE_API_KEY=${{ secrets.PINECONE_API_KEY }}
+              PINECONE_INDEX_NAME=${{ secrets.PINECONE_INDEX_NAME }}
+              PINECONE_ENVIRONMENT=${{ secrets.PINECONE_ENVIRONMENT }}
+
+              # ==============================================
+              # Qdrant (Local on Port 6333)
+              # ==============================================
+              QDRANT_API_URL=${{ secrets.QDRANT_API_URL }}
+              QDRANT_API_KEY=${{ secrets.QDRANT_API_KEY }}
+              QDRANT_AUTO_RECREATE=true
+
+              # ==============================================
+              # Hetzner Object Storage
+              # ==============================================
               HETZNER_ACCESS_KEY=${{ secrets.HETZNER_ACCESS_KEY }}
               HETZNER_SECRET_KEY=${{ secrets.HETZNER_SECRET_KEY }}
+              HETZNER_BUCKET_NAME=${{ secrets.HETZNER_BUCKET_NAME }}
+
+              # ==============================================
+              # Stripe
+              # ==============================================
+              STRIPE_SECRET_KEY=${{ secrets.STRIPE_SECRET_KEY }}
+              STRIPE_PRICE_ID=${{ secrets.STRIPE_PRICE_ID }}
+              STRIPE_WEBHOOK_SECRET=${{ secrets.STRIPE_WEBHOOK_SECRET }}
+
+              # ==============================================
+              # External APIs
+              # ==============================================
+              REPLICATE_API_TOKEN=${{ secrets.REPLICATE_API_TOKEN }}
+              COGNEE_API_KEY=${{ secrets.COGNEE_API_KEY }}
+
+              # ==============================================
+              # Rate Limiting
+              # ==============================================
+              THROTTLE_SHORT_TTL=1000
+              THROTTLE_SHORT_LIMIT=10
+              THROTTLE_MEDIUM_TTL=60000
+              THROTTLE_MEDIUM_LIMIT=100
+              THROTTLE_LONG_TTL=3600000
+              THROTTLE_LONG_LIMIT=1000
+
+              # ==============================================
+              # File Upload
+              # ==============================================
+              MAX_FILE_SIZE=52428800
+
+              # ==============================================
+              # Text Processing
+              # ==============================================
+              CHUNK_SIZE=700
+              CHUNK_OVERLAP=100
+              OCR_LANGUAGES=deu+eng
               EOF
               chmod 600 .env
 
