--- a/.github/workflows/deploy-backend.yml
+++ b/.github/workflows/deploy-backend.yml
@@ -26,21 +26,12 @@ jobs:
       - name: Build Backend (CI)
         run: npm run build
 
-      - name: Write SSH key
+      - name: Setup SSH (plain secret)
+        env:
+          SSH_KEY: ${{ secrets.SSH_PRIVATE_KEY_BACKEND }}
         run: |
           install -m 700 -d ~/.ssh
-          cat > ~/.ssh/id_ed25519 << 'EOF'
-          ${{ secrets.SSH_PRIVATE_KEY_BACKEND }}
-          EOF
-          chmod 600 ~/.ssh/id_ed25519
-          eval "$(ssh-agent -s)"
-          ssh-add ~/.ssh/id_ed25519
-          printf "Host 142.132.191.84\n  StrictHostKeyChecking no\n" >> ~/.ssh/config
-
-      - name: Set up SSH (Base64, robust)
-        run: |
-          mkdir -p ~/.ssh
-          echo "${{ secrets.SSH_PRIVATE_KEY_BACKEND_B64 }}" | base64 -d > ~/.ssh/id_ed25519
+          printf "%s" "$SSH_KEY" > ~/.ssh/id_ed25519
           chmod 600 ~/.ssh/id_ed25519
           eval "$(ssh-agent -s)"
           ssh-add ~/.ssh/id_ed25519
