--- a/package.json
+++ b/package.json
@@ -30,10 +30,12 @@
     "@nestjs/throttler": "^5.0.1",
     "@pinecone-database/pinecone": "^6.1.2",
     "@qdrant/js-client-rest": "^1.15.1",
+    "@types/jsonwebtoken": "^9.0.10",
     "axios": "^1.11.0",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.0",
     "cors": "^2.8.5",
+    "jsonwebtoken": "^9.0.2",
     "mammoth": "^1.6.0",
     "mongoose": "^8.18.1",
     "multer": "^1.4.5-lts.1",
