add to docker and fix for all

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -25,6 +25,21 @@ services:
       retries: 3
       start_period: 40s
 
+  # Qdrant Vector Database
+  qdrant:
+    image: qdrant/qdrant:latest
+    container_name: rag-qdrant
+    restart: unless-stopped
+    ports:
+      - "6333:6333"  # HTTP API
+      - "6334:6334"  # gRPC API
+    volumes:
+      - qdrant-storage:/qdrant/storage
+    networks:
+      - rag-network
+    environment:
+      - QDRANT__SERVICE__GRPC_PORT=6334
+
   # Optional: Redis for caching (uncomment if needed)
   # redis:
   #   image: redis:7-alpine
@@ -42,6 +57,8 @@ networks:
     driver: bridge
 
 volumes:
+  qdrant-storage:
+    driver: local
   # redis-data:
   #   driver: local
   logs:
